# DTDataGloveModule

./: CMakeCache.txt  CMakeLists.txt  readme.md
DTDataGloveModule/html/: _c_make_lists_8txt.html  _c_make_rule_hashes_8txt.html  annotated.html  (+194 more)
app/: CMakeLists.txt
extractor/: CMakeLists.txt  extractor.cpp
saved_data/: FrancescoRea_middleObs1_run.csv  FrancescoRea_middleObs2_run.csv  FrancescoRea_middleObs3_run.csv  FrancescoRea_middleObs4_run.csv  FrancescoRea_normal1_run.csv  FrancescoRea_normal2_run.csv  FrancescoRea_normal3_run.csv  FrancescoRea_normal4_run.csv  FrancescoRea_pick1_run.csv  FrancescoRea_pick2_run.csv  FrancescoRea_pick3_run.csv  FrancescoRea_pick4_run.csv  FrancescoRea_placeOr1_run.csv  FrancescoRea_placeOr2_run.csv  FrancescoRea_placeOr3_run.csv  FrancescoRea_placeOr4_run.csv  FrancescoRea_placeVer1_run.csv  FrancescoRea_placeVer2_run.csv  FrancescoRea_placeVer3_run.csv  FrancescoRea_placeVer4_run.csv  GiadaLombardi_middleOba_run.csv  GiadaLombardi_middleObs2_run.csv  GiadaLombardi_middleObs3_run.csv  GiadaLombardi_middleObs4_run.csv  GiadaLombardi_normal1_run.csv  GiadaLombardi_normal2_run.csv  GiadaLombardi_normal3_run.csv  GiadaLombardi_normal4_run.csv  GiadaLombardi_pick1_run.csv  GiadaLombardi_pick2_run.csv  GiadaLombardi_pick3_run.csv  GiadaLombardi_pick4_run.csv  GiadaLombardi_placeOr1_run.csv  GiadaLombardi_placeOr2_run.csv  GiadaLombardi_placeOr3_run.csv  GiadaLombardi_placeOr4_run.csv  GiadaLombardi_placeVer1_run.csv  GiadaLombardi_placeVer2_run.csv  GiadaLombardi_placeVer3_run.csv  GiadaLombardi_placeVer4_run.csv  (+61 more)
src/: CMakeLists.txt
(+378 files in other folders)
